tests/negative/runtime/int_overflow_add_compound/input.ci
void main() {
    int x = 9223372036854775807;  // INT64_MAX
    x += 1;
    print(toString(x) + "\n");
}
